Ændrede i index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dokument</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="gameContainer">
-        <h1>Tic Tac Toe</h1>
+        <h1>Kryds og bolle</h1>
         <div id="cellContainer">
             <div cellIndex="0" class="cell"></div>
             <div cellIndex="1" class="cell"></div>
@@ -22,7 +22,7 @@
             <div cellIndex="8" class="cell"></div>
         </div>
         <h2 id="statusText"></h2>
-        <button id="restartBtn">Restart</button>
+        <button id="restartBtn">Genstart</button>
     </div>
     <script src="index.js"></script>
 </body>
